--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "next": "16.0.10",
     "react": "19.2.1",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
